--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <title>Battery Status API Example</title>
   <script>
     window.onload = function () {
+      var battery = navigator.battery || navigator.webkitBattery || navigator.mozBattery || navigator.msBattery;
+
+if (battery) {
+    alert(battery.level);
+}
       function updateBatteryStatus(battery) {
         document.querySelector('#charging').textContent = battery.charging ? 'charging' : 'not charging';
         document.querySelector('#level').textContent = battery.level;
